--- a/KanjiRyokucha/Study.storyboard
+++ b/KanjiRyokucha/Study.storyboard
@@ -248,6 +248,6 @@
         <image name="kanjibkg.png" width="500" height="500"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hje-NF-JIQ"/>
+        <segue reference="dSo-jb-Oew"/>
     </inferredMetricsTieBreakers>
 </document>
