--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17140" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17115"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CredentialsViewController" customModule="KanjiRyokucha" customModuleProvider="target">
             <connections>
-                <outlet property="guestButton" destination="TQs-b2-eXE" id="3Cf-5R-DtF"/>
                 <outlet property="loginButton" destination="1aI-wY-QJu" id="v0d-aY-xaa"/>
                 <outlet property="loginContainer" destination="h6g-Ix-9mH" id="c0T-fq-iTJ"/>
                 <outlet property="passwordField" destination="GCW-cT-lfx" id="H2k-Va-nTQ"/>
@@ -28,17 +28,17 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kanji ryokucha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWx-SD-x5n">
                     <rect key="frame" x="80" y="455" width="215" height="42"/>
                     <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                    <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="textColor" systemColor="secondaryLabelColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v 0.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEb-v8-ePA">
-                    <rect key="frame" x="271.5" y="497" width="23.5" height="14.5"/>
+                    <rect key="frame" x="271" y="497" width="24" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
-                    <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="textColor" systemColor="secondaryLabelColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Kanji Koohii credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sxz-Z0-daI">
-                    <rect key="frame" x="51.5" y="40" width="272" height="20.5"/>
+                    <rect key="frame" x="52.5" y="40" width="270.5" height="20.5"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -134,32 +134,16 @@
                         <action selector="signupPressed:" destination="-1" eventType="touchUpInside" id="Rvp-gO-HuC"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQs-b2-eXE" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                    <rect key="frame" x="62.5" y="369.5" width="250" height="38"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <accessibility key="accessibilityConfiguration" identifier="enterGuest"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                    <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
-                    <state key="normal" title="Enter as Guest">
-                        <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="guestPressed" destination="-1" eventType="touchUpInside" id="ryn-Fm-pcf"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" red="0.87450980389999999" green="1" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="TQs-b2-eXE" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="4YE-6Z-5DX"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" priority="750" id="DKN-2h-bya"/>
                 <constraint firstItem="h6g-Ix-9mH" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HYp-X8-FXk"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="top" secondItem="h6g-Ix-9mH" secondAttribute="bottom" constant="31" id="Lbd-9J-A5X"/>
                 <constraint firstItem="XWx-SD-x5n" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PGi-Wz-9F3"/>
                 <constraint firstItem="gEb-v8-ePA" firstAttribute="top" secondItem="XWx-SD-x5n" secondAttribute="bottom" id="Pml-Yu-F2V"/>
                 <constraint firstItem="Sxz-Z0-daI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="S7u-KN-6Xx"/>
-                <constraint firstItem="TQs-b2-eXE" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" id="UhV-aZ-WGW"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="boQ-o8-4fh"/>
-                <constraint firstItem="TQs-b2-eXE" firstAttribute="top" secondItem="pNb-6v-x7W" secondAttribute="bottom" constant="20" id="hhi-oN-gwE"/>
                 <constraint firstItem="Sxz-Z0-daI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="iSs-MZ-K9x"/>
                 <constraint firstItem="gEb-v8-ePA" firstAttribute="trailing" secondItem="XWx-SD-x5n" secondAttribute="trailing" id="nZN-Wt-IER"/>
                 <constraint firstAttribute="bottom" secondItem="XWx-SD-x5n" secondAttribute="bottom" constant="25" id="uAF-5K-K6Q"/>
@@ -169,4 +153,9 @@
             <point key="canvasLocation" x="35.5" y="-18"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
