--- a/KanjiRyokucha/SRSViewController.xib
+++ b/KanjiRyokucha/SRSViewController.xib
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,7 +32,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="u6p-5U-MRq" userLabel="New Stack View">
-                    <rect key="frame" x="115" y="20" width="90" height="125"/>
+                    <rect key="frame" x="115" y="0.0" width="90" height="125"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61K-rn-FdX" userLabel="New view">
                             <rect key="frame" x="0.0" y="0.0" width="90" height="95"/>
@@ -76,14 +72,14 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <viewLayoutGuide key="safeArea" id="Xgq-Fe-u2d"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="125" id="6pI-TF-Gtw"/>
                         <constraint firstAttribute="width" constant="90" id="plk-nV-kNW"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="Xgq-Fe-u2d"/>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kTh-nf-C0G" userLabel="Due Stack View">
-                    <rect key="frame" x="-15" y="20" width="90" height="125"/>
+                    <rect key="frame" x="-15" y="0.0" width="90" height="125"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GKn-E9-G3C" userLabel="Due view">
                             <rect key="frame" x="0.0" y="0.0" width="90" height="95"/>
@@ -95,9 +91,9 @@
                                     <state key="normal" title="0"/>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="due" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbV-rh-Xup">
-                                    <rect key="frame" x="30" y="70.5" width="29" height="20.5"/>
+                                    <rect key="frame" x="30.5" y="70.5" width="29" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="highlightedColor" systemColor="darkTextColor"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -124,14 +120,14 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <viewLayoutGuide key="safeArea" id="Adb-sl-lc2"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="125" id="vs2-aF-Y19"/>
                         <constraint firstAttribute="width" constant="90" id="ydG-RR-ZD9"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="Adb-sl-lc2"/>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9OS-pm-Jhm" userLabel="Failed Stack View">
-                    <rect key="frame" x="245" y="20" width="90" height="125"/>
+                    <rect key="frame" x="245" y="0.0" width="90" height="125"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dg-30-VUX" userLabel="Failed view">
                             <rect key="frame" x="0.0" y="0.0" width="90" height="125"/>
@@ -142,7 +138,7 @@
                                     <state key="normal" title="0"/>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="failed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyK-gU-xy2" userLabel="failed">
-                                    <rect key="frame" x="24" y="100.5" width="42" height="20.5"/>
+                                    <rect key="frame" x="24.5" y="100.5" width="41.5" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -171,11 +167,11 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <viewLayoutGuide key="safeArea" id="jiz-42-dfZ"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="125" id="KtH-pW-X0e"/>
                         <constraint firstAttribute="width" constant="90" id="qWB-49-wal"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="jiz-42-dfZ"/>
                 </stackView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kanjibkg.png" translatesAutoresizingMaskIntoConstraints="NO" id="BWI-X9-MOk">
                     <rect key="frame" x="10" y="90" width="300" height="300"/>
@@ -195,7 +191,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gAJ-ux-uci">
-                    <rect key="frame" x="112.5" y="429" width="95" height="27"/>
+                    <rect key="frame" x="112" y="429" width="96" height="27"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="@kanji_ryokucha">
                         <color key="titleColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -209,7 +205,7 @@
                     <color key="color" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                 </activityIndicatorView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSJ-QZ-DOD" userLabel="Review container">
-                    <rect key="frame" x="20" y="150" width="280" height="350"/>
+                    <rect key="frame" x="20" y="130" width="280" height="350"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="338" id="6xi-8r-KEt"/>
                         <constraint firstAttribute="height" constant="350" id="ypg-Ku-32Z" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
@@ -232,6 +228,7 @@
                     </variation>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="TUV-m1-tcZ"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="aSJ-QZ-DOD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" symbolic="YES" id="0NH-1P-cRT"/>
@@ -281,7 +278,6 @@
                     </userDefinedRuntimeAttributes>
                 </constraint>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="TUV-m1-tcZ"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="Ihb-WW-U3Y"/>
@@ -303,5 +299,8 @@
     </objects>
     <resources>
         <image name="kanjibkg.png" width="500" height="500"/>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
